# synthetic-data-generation

./: Makefile  README.md  pyproject.toml
.github/workflows/: run_test.yaml
DUO/: GC_Table1.ipynb  Table1_stratified_sample20k_metadata.json
Law School Admissions Bar Passage/: Level1_SDG_SB.ipynb  Level1_SDG_SB_v2.ipynb  Level2_SDG_GA.ipynb  Level2_SDG_GA_SB_BTSR.ipynb  Level_1_SDG_EM.ipynb  SDG_cohort_requiremets.txt  mlflow.db  synthetic_data_smote.csv
Law School Admissions Bar Passage/Dataset/: bar_pass_prediction_SD10k.csv  bar_pass_prediction_SD2k.csv
Law School Admissions Bar Passage/Not final nootebooks/: Level1_SDG_SB.ipynb  Level_1_SDG_EM.ipynb
Law School Admissions Bar Passage/Not final notebooks/: Bar Passage data exploration.ipynb  Level2_SDG_GA_SB_BTSR.ipynb
Law School Admissions Bar Passage/Notebooks/: Data Exploration Bar Passage Dataset.ipynb  Data exploration Bar Passage Dataset.ipynb  Gaussian Coupola SDG Explained.ipynb  Gaussian Coupola SDG Method on Bar Passage Dataset.ipynb  PLA_metadata.json  sample_stratified.ipynb
Law School Admissions Bar Passage/Notebooks/iframe_figures/: figure_24.html  figure_25.html  figure_26.html  figure_27.html  figure_28.html  figure_29.html  figure_30.html  figure_31.html  figure_32.html  figure_33.html  figure_34.html  figure_35.html  figure_36.html  figure_37.html  figure_38.html  figure_41.html  figure_56.html  figure_57.html  figure_58.html  figure_59.html  figure_60.html
Law School Admissions Bar Passage/iframe_figures/: figure_20.html
