[tool.poetry]
name = "synthetic-data-generation"
version = "0.1.0"
description = "A package for generating synthetic data basedon the DUO use case"
authors = ["Emmanuel Menvouta <emmanueljordy.menvoutankpwele@kuleuven.be>"]
readme = "README.md"
packages = [{include = "synthetic_data_generation"}]

[tool.poetry.dependencies]
python = "^3.11"
absl-py = "^2.1.0"
alembic = "^1.13.1"
aniso8601 = "^9.0.1"
appdirs = "^1.4.4"
asttokens = "^2.4.1"
astunparse = "^1.6.3"
beautifulsoup4 = "^4.12.3"
blinker = "^1.8.1"
boto3 = "^1.34.95"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
